--- a/plagozny.pl/package.json
+++ b/plagozny.pl/package.json
@@ -9,6 +9,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
