--- a/plagozny.pl/package.json
+++ b/plagozny.pl/package.json
@@ -10,14 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "babel": "^6.23.0",
     "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-register": "^6.9.0",
     "cross-env": "^1.0.8",
-    "css-loader": "^0.23.1",
+    "css-loader": "^2.1.1",
     "expect": "^1.20.1",
     "file-loader": "^1.1.6",
     "image-webpack-loader": "^4.4.0",
@@ -36,18 +37,18 @@
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.6.2",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^3.1.9",
-    "webpack-hot-middleware": "^2.11.0"
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-hot-middleware": "^2.24.3"
   },
   "devDependencies": {
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-stage-0": "^6.5.0",
     "react-transform-hmr": "^1.0.4",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
